<resources>
    <string name="app_name">OpenWeather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">welcome</string>
    <string name="enter_your_city_name">enter your city name</string>
    <string name="submit">submit</string>
    <string name="more">more</string>
    <string name="history">history</string>
    <string name="about">sdfkng;alshkg;ashg;hsad;jghs;hg;asdha;</string>
    <string name="about_us">about us</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="city_not_found">city not found</string>
</resources>
