<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.aamnapm.openweather.ui.fragment.selectcity.SelectCityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".ui.activity.splash.SplashActivity">


        <ImageView
            android:id="@+id/img_location"
            android:layout_width="@dimen/margin_48"
            android:layout_height="@dimen/margin_48"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:padding="@dimen/margin_8"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@id/edt_city_name"
            app:layout_constraintRight_toLeftOf="@id/edt_city_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/edt_city_name" />


        <EditText
            android:id="@+id/edt_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/background_edt_city"
            android:gravity="center"
            android:hint="@string/enter_your_city_name"
            android:importantForAutofill="yes"
            android:inputType="text"
            android:onTextChanged="@{viewModel.onTextChanged}"
            android:paddingStart="@dimen/margin_16"
            android:paddingTop="@dimen/edt_padding"
            android:paddingEnd="@dimen/margin_16"
            android:paddingBottom="@dimen/edt_padding"
            android:text="@{viewModel.cityName}"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18"
            app:layout_constraintLeft_toRightOf="@id/img_location"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:onCheckedChanged="@{viewModel.onSplitTypeChanged}"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/edt_city_name">

            <RadioButton
                android:id="@+id/radio_metr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelvin" />

            <RadioButton
                android:id="@+id/radio_celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius" />

            <RadioButton
                android:id="@+id/radio_fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/background_btn_submit"
            android:text="@string/submit"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="@id/radio_temp"
            app:layout_constraintStart_toStartOf="@id/radio_temp"
            app:layout_constraintTop_toBottomOf="@id/radio_temp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>